--- a/index.html
+++ b/index.html
@@ -200,6 +200,10 @@
 
     <script>
         TogetherJSConfig_hubBase = "https://quilled-occipital-botany.glitch.me/";
+        TogetherJSConfig_dontShowClicks = true;
+        TogetherJSConfig_enableShortcut = true;
+        TogetherJSConfig_useMinimizedCode = true;
+        TogetherJSConfig_disableWebRTC = true;
     </script>
     <script src="https://togetherjs.com/togetherjs-min.js"></script>
     <button onclick="TogetherJS(this); return false;">
