--- a/index.html
+++ b/index.html
@@ -204,6 +204,8 @@
         TogetherJSConfig_enableShortcut = true;
         TogetherJSConfig_useMinimizedCode = true;
         TogetherJSConfig_disableWebRTC = true;
+        TogetherJSConfig_autoStart = true;
+        TogetherJSConfig_suppressJoinConfirmation = true;
     </script>
     <script src="https://togetherjs.com/togetherjs-min.js"></script>
     <button onclick="TogetherJS(this); return false;">
