--- a/index.html
+++ b/index.html
@@ -206,6 +206,8 @@
         TogetherJSConfig_disableWebRTC = true;
         TogetherJSConfig_autoStart = true;
         TogetherJSConfig_suppressJoinConfirmation = true;
+        TogetherJSConfig_findRoom = { prefix: "fatediceroller", max: 5 }
+
     </script>
     <script src="https://togetherjs.com/togetherjs-min.js"></script>
     <button onclick="TogetherJS(this); return false;">
